  * remove debian/README.source because repacking is not required
  * remove version mangling from debian/watch
  * update debian/README.Debian, remove outdated note regarding removed
    files
  * remove Debian patches that have been applied upstream
   - debian/patches/fix_spelling_errors.patch
   - debian/patches/remove_fmopl_code.patch
   - debian/patches/remove_ymf262_code.patch

 -- Jan Dittberner <jandd@debian.org>  Fri, 14 May 2010 09:07:28 +0200

dosbox (0.73+dfsg1-1) unstable; urgency=low

  * remove src/hardware/ymf262.c, src/hardware/ymf262.h, add
    debian/patches/remove_ymf262_code.patch to remove dependencies on
    ymf262.{c,h}, update debian/patches/series and debian/README.source
    (Closes: #559443)
  * debian/copyright: refer to GPL-2 explicitly
  * debian/watch: add opts=dversionmangle to calculate correct upstream
    version
  * incorporate upstream suggestions:
    - remove debian/patches/bios_keyboard.cpp.patch, upstream uses
      putenv("SDL_DISABLE_LOCK_KEYS=1") in src/gui/sdlmain.cpp, update
      debian/patches/series
    - remove debian/dosbox.conf.example because dosbox creates a
      configuration file automatically if it does not exist, update
      debian/docs and debian/README.Debian

 -- Jan Dittberner <jandd@debian.org>  Sat, 05 Dec 2009 19:37:29 +0100

dosbox (0.73-2) unstable; urgency=low

  * debian/control:
    - remove quilt from Build-Depends because source format 3.0 (quilt)
      implies that already
  * debian/rules:
    - remove --with quilt
  * debian/README.source:
    - remove quilt notes

 -- Jan Dittberner <jandd@debian.org>  Tue, 01 Dec 2009 22:07:23 +0100

dosbox (0.73-1) unstable; urgency=low

  * New upstream release (LP: #382024, Closes: #530940)
  * Include fixes from NMU (Closes: #417159), thanks to James Vega
  * Switch from cdbs to debhelper 7 and quilt
  * remove old patches, applied upstream:
    debian/patches/dos_keyboard_layout.cpp.patch,