@@ -1,62 +1,14 @@
 Author: Jan Dittberner <jandd@debian.org>
-Subject: fix manpage errors found by Lintian
+Subject: fix manpage spelling error found by Lintian
 Last-Update: 2009-11-30
 --- a/docs/dosbox.1
 +++ b/docs/dosbox.1
-@@ -96,17 +96,17 @@ Output version information and exit. Useful for frontends.
- .TP
- .BI \-editconf " program"
- .RI calls " program" " with as first parameter the configuration file."
--.R You can specify this command more than once. In this case it will
-+You can specify this command more than once. In this case it will
+@@ -111,7 +111,7 @@
  .RI " move to second " program " if the first one fails to start."
  .TP
  .BI \-opencaptures " program"
- .RI "calls " program " with as  first paramater the location of the captures folder."
+-.RI "calls " program " with as  first paramater the location of the captures folder."
++.RI "calls " program " with as  first parameter the location of the captures folder."
  .TP
  .B \-printconf
--.R prints the location of the default configuration file.
-+prints the location of the default configuration file.
- .TP
- .B \-eraseconf
--.R removes the default configuration file.
-+removes the default configuration file.
- .SH "INTERNAL COMMANDS"
- .B dosbox
- supports most of the DOS commands found in command.com. In addition, the
-@@ -183,7 +183,7 @@ Display the amount of free memory
- .TP
- .B CONFIG [\-writeconf] [\-writelang] file
- .LP
--.B CONFIG -securemode
-+.B CONFIG \-securemode
- .LP
- .RB "Write the current configuration or language settings to " file ,
- which is located on the local filesystem. Not a mounted drive in 
-@@ -220,7 +220,7 @@ The name of the program which is executed after loadfix eats up its memory.
- .RB "Parameters given to the " programname " executable."
- .TP
- .B \-size
--The amount of memory to eat up (in kb). Example -32, -64 or -128 
-+The amount of memory to eat up (in kb). Example \-32, \-64 or \-128 
- .TP
- .B \-f
- Frees all memory eaten up by loadfix.
-@@ -234,7 +234,7 @@ this as well!)
- .TP
- .B IMGMOUNT
- .LP
--.RB "A utility to mount disk images and CD-ROM images in " dosbox .
-+.RB "A utility to mount disk images and CD\(hyROM images in " dosbox .
- .TP
- .RB "Read the " README " of " dosbox " for the full and correct syntax."
- .RE
-@@ -283,7 +283,7 @@ Start the keymapper.
- .IP CTRL\-ALT\-F5
- Start/Stop creating a movie of the screen.
- .IP CTRL\-F4
--Swap mounted disk-image (Only used with imgmount). Update directory cache
-+Swap mounted disk\(hyimage (Only used with imgmount). Update directory cache
- for all drives!
- .IP CTRL\-F5
- Save a screenshot.(png)
+ prints the location of the default configuration file.
